# robOS

./: .copilotignore  .esp_config  .gitignore  CMakeLists.txt  ESP32_QUICK_GUIDE.md  README.md  flash.sh  monitor.sh  partitions.csv  robOS.code-workspace  sdkconfig.defaults  test_blob_export.c  开发指引.md
.github/: BUILD_FIX_GUIDE.md  badges.md
.github/workflows/: build-esp32s3.yml  debug-build.yml  quality-check.yml  simple-build-test.yml
components/agx_monitor/: CMakeLists.txt  agx_monitor.c  idf_component.yml
components/board_led/: CMakeLists.txt  board_led.c
components/color_correction/: CMakeLists.txt  color_console.c  (+3 more)
components/lwip_override/: CMakeLists.txt  test_arp_config.c
components/storage_manager/: CMakeLists.txt  storage_console.c  storage_console.h
components/storage_manager/include/: storage_console.h  storage_device.h  storage_fs.h  storage_manager.h  storage_shell.h  storage_shell_mode.h
components/storage_manager/src/: storage_device.c  storage_fs.c  storage_manager.c  storage_shell.c  storage_shell_mode.c
docs/: ABSOLUTE_SILENCE_FINAL.md  AGX_LOG_CLEANUP_SUMMARY.md  AGX_MONITOR_UPDATES.md  AGX_STARTUP_DELAY_FEATURE.md  API_REFERENCE.md  CODING_STANDARDS.md  COLOR_CORRECTION_GUIDE.md  CONFIG_IMPORT_BLOB_FIX.md  FAN_HYSTERESIS_CONTROL_IMPLEMENTATION.md  FAN_HYSTERESIS_TEST_PLAN.md  GPIO_USB_MUX_IMPLEMENTATION.md  LPMU_AUTO_START_FEATURE.md  NVS_FULL_EXPORT_BLOB_SUPPORT.md  PROJECT_PROGRESS.md  README.md  ROBOS_V2_FEATURE_SUMMARY.md  SD_CARD_IMPORT_EXPORT_IMPLEMENTATION_SUCCESS.md  SILENT_MODE_FINAL.md  SMART_SAFETY_TEMPERATURE_STRATEGY.md  TECHNICAL_ARCHITECTURE.md  TEMPERATURE_INTEGRATION_GUIDE.md  WEBSOCKET_LOG_SILENCE_FINAL.md  WEB_SERVER_EVENT_DRIVEN_UPDATE.md  WEB_SERVER_GUIDE.md
main/: CMakeLists.txt  idf_component.yml  main.c
sdcard/: matrix.json  test_config.json
(+90 files in other folders)
